Pull up the following revisions(s) (requested by rmind in ticket #1695): 	sys/kern/kern_event.c:	revision 1.74

kqueue_register: avoid calling fd_getfile() with filedesc_t::fd_lock held.
Fixes PR/45479 by KOGULE Ryo.